--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <body>
     <div class="Container">
       <div class="Calculator">
-        <input type="text" placeholder="0" id="inPut" />
+        <input type="text" placeholder="0" id="inPut" disabled/>
         <div>
           <button class="change">AC</button>
           <button class="change">DE</button>
